# harica-smime

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
example/: README.md  manage.py  requirements.txt
example/demo/: settings.py  urls.py  views.py
example/demo/templates/: index.html
src/harica_smime/: __init__.py  __main__.py  _http.py  _validators.py  client.py  enums.py  errors.py  otp.py
src/harica_smime/contrib/: __init__.py  cli.py  smoke.py
src/harica_smime/contrib/django/: __init__.py  apps.py
src/harica_smime/contrib/django/static/harica_smime/: forge.LICENSE  harica-smime-crypto.js
tests/: conftest.py  test_client_domains.py  test_client_login.py  test_client_smime.py  test_enums.py  test_http.py  test_otp.py  test_smoke.py  test_validators.py
tests/integration/: test_staging_live.py
