[build-system]
requires = ["setuptools>77"]
build-backend = "setuptools.build_meta"

[project]
name = "harica-smime"
version = "0.1.0"
description = "HARICA S/MIME REST client library"
authors = [{name = "Thomas Breitner", email = "mail@thms.de"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46",
]
urls.Repository = "https://github.com/tombreit/harica-smime"

[project.optional-dependencies]
django = ["django>=5.2"]
test = ["pytest>=7", "pytest-httpserver>=1.0"]

[project.scripts]
harica-smime = "harica_smime.contrib.cli:main"

[tool.setuptools.package-data]
harica_smime = ["py.typed"]
"harica_smime.contrib.django" = ["static/harica_smime/*"]
